plugins/kotlin/idea/tests/testData/checker/codeFragments/blockCodeFragment.kt.fragment.k2
val b = 1
a + b + <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'c'.">c</error>